--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -35,7 +35,11 @@
         android:id="@+id/subscribedRoomFragment"
         android:name="com.example.virtualclasses.ui.fragments.SubscribedRoomFragment"
         android:label="fragment_subscribed_room"
-        tools:layout="@layout/fragment_subscribed_room" />
+        tools:layout="@layout/fragment_subscribed_room" >
+        <action
+            android:id="@+id/action_subscribedRoomFragment_to_subscribeNewRoomFragment"
+            app:destination="@id/subscribeNewRoomFragment" />
+    </fragment>
     <fragment
         android:id="@+id/homeFragment"
         android:name="com.example.virtualclasses.ui.fragments.HomeFragment"
@@ -53,4 +57,9 @@
         android:name="com.example.virtualclasses.ui.fragments.AddRoomFragment"
         android:label="fragment_add_room"
         tools:layout="@layout/fragment_add_room" />
+    <fragment
+        android:id="@+id/subscribeNewRoomFragment"
+        android:name="com.example.virtualclasses.ui.fragments.SubscribeNewRoomFragment"
+        android:label="fragment_subscribe_new_room"
+        tools:layout="@layout/fragment_subscribe_new_room" />
 </navigation>
