--- a/app/src/main/res/layout/fragment_week_days.xml
+++ b/app/src/main/res/layout/fragment_week_days.xml
@@ -3,21 +3,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.fragments.SubscribedRoomsFragment"
+    tools:context=".ui.fragments.WeekDaysFragment"
     android:orientation="vertical"
-    android:gravity="center"
-    android:paddingStart="16dp"
-    android:paddingEnd="16dp">
+    android:gravity="center_horizontal">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/subscribedRoom"
+        android:id="@+id/weekdaysRecyclerView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_weight="1"/>
+
     <Button
-        android:id="@+id/subscribeRoomButton"
+        android:id="@+id/addUpdateButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="subscribe to room"/>
+        android:text="add Update"/>
 
 </LinearLayout>
