added ui for perday schedule screen and setup the navArgs

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -74,6 +74,8 @@
         <action
             android:id="@+id/action_weekDaysFragment_to_editPerDayScheduleFragment"
             app:destination="@id/editPerDayScheduleFragment" />
+        <argument android:name="room"
+            app:argType="com.example.virtualclasses.model.Room"/>
     </fragment>
     <fragment
         android:id="@+id/editPerDayScheduleFragment"
@@ -84,5 +86,8 @@
             android:name="dayOfWeekIndex"
             app:argType="integer"
             android:defaultValue="7" />
+        <argument
+            android:name="room"
+            app:argType="com.example.virtualclasses.model.Room" />
     </fragment>
 </navigation>
