--- a/app/src/main/res/layout/fragment_edit_per_day_schedule.xml
+++ b/app/src/main/res/layout/fragment_edit_per_day_schedule.xml
@@ -6,15 +6,16 @@
     tools:context=".ui.fragments.EditPerDayScheduleFragment"
     android:orientation="vertical">
 
-    <ScrollView
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_weight="1">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
             <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/defaultRecyclerView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 tools:listitem="@layout/item_schedule"
@@ -26,7 +27,7 @@
                 android:src="@drawable/ic_add_schedule"
                 android:padding="8dp"/>
         </LinearLayout>
-    </ScrollView>
+    </androidx.core.widget.NestedScrollView>
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
