--- a/app/src/main/res/layout/fragment_edit_per_day_schedule.xml
+++ b/app/src/main/res/layout/fragment_edit_per_day_schedule.xml
@@ -29,6 +29,7 @@
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
     <Button
+        android:id="@+id/saveDefaultSchedule"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
