--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,7 @@
     <color name="violet">#7579e7</color>
     <color name="lightViolet">#9ab3f5</color>
     <color name="violetGreen">#a3d8f4</color>
-    <color name="lightGreen">#b9fffc</color>
+    <color name="green">#53A218</color>
+    <color name="lightGreen">#C6EAAC</color>
+    <color name="grey">#737373</color>
 </resources>
