--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -23,39 +23,10 @@
         android:label="fragment_sign_up"
         tools:layout="@layout/fragment_sign_up" />
     <fragment
-        android:id="@+id/myRoomsFragment"
-        android:name="com.example.virtualclasses.ui.fragments.MyRoomsFragment"
-        android:label="fragment_my_rooms"
-        tools:layout="@layout/fragment_my_rooms" >
-        <action
-            android:id="@+id/action_myRoomsFragment_to_addRoomFragment"
-            app:destination="@id/addRoomFragment" />
-        <action
-            android:id="@+id/action_myRoomsFragment_to_weekDaysFragment"
-            app:destination="@id/weekDaysFragment">
-        </action>
-    </fragment>
-    <fragment
-        android:id="@+id/subscribedRoomFragment"
-        android:name="com.example.virtualclasses.ui.fragments.SubscribedRoomsFragment"
-        android:label="fragment_subscribed_room"
-        tools:layout="@layout/fragment_subscribed_room" >
-        <action
-            android:id="@+id/action_subscribedRoomFragment_to_subscribeNewRoomFragment"
-            app:destination="@id/subscribeNewRoomFragment" />
-    </fragment>
-    <fragment
         android:id="@+id/homeFragment"
         android:name="com.example.virtualclasses.ui.fragments.HomeFragment"
         android:label="fragment_home"
-        tools:layout="@layout/fragment_home" >
-        <action
-            android:id="@+id/action_homeFragment_to_myRoomsFragment"
-            app:destination="@id/myRoomsFragment" />
-        <action
-            android:id="@+id/action_homeFragment_to_subscribedRoomFragment"
-            app:destination="@id/subscribedRoomFragment" />
-    </fragment>
+        tools:layout="@layout/fragment_home" />
     <fragment
         android:id="@+id/addRoomFragment"
         android:name="com.example.virtualclasses.ui.fragments.AddRoomFragment"
