--- a/app/src/main/res/layout/fragment_view_subscribed_room_schedule.xml
+++ b/app/src/main/res/layout/fragment_view_subscribed_room_schedule.xml
@@ -1,13 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.fragments.ViewSubscribedRoomSchedule">
 
-    <TextView
+    <LinearLayout
+        android:id="@+id/topView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="viewSubscribedRoomScheduleFragment" />
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="8dp">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Schedule"
+            android:layout_weight="1"
+            android:fontFamily="@font/roboto"
+            android:textSize="20sp"/>
+        <Spinner
+            android:id="@+id/daySpinner"
+            android:layout_width="wrap_content"
+            android:layout_height="24dp" />
+    </LinearLayout>
+    <View
+        android:id="@+id/scheduleView"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_below="@id/topView"
+        android:background="?android:attr/dividerVertical"/>
 
-</FrameLayout>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/scheduleRecyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/scheduleView"
+        android:layout_marginTop="8dp"/>
+    <ProgressBar
+        android:id="@+id/scheduleProgressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"/>
+
+</RelativeLayout>
