--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -11,4 +11,9 @@
         <item>Select Date</item>
     </string-array>
 
+    <string-array name="default_updated">
+        <item>Updated</item>
+        <item>Default</item>
+    </string-array>
+
 </resources>
