--- a/app/src/main/res/layout/fragment_schedule_form.xml
+++ b/app/src/main/res/layout/fragment_schedule_form.xml
@@ -20,7 +20,8 @@
            android:paddingTop="12dp"
            android:paddingRight="12dp"/>
        <TextView
-           android:layout_width="wrap_content"
+           android:id="@+id/dayName"
+           android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Wednesday"
            android:textSize="24sp"
