--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -49,35 +49,18 @@
         android:name="com.example.virtualclasses.ui.fragments.EditMyRoomSchedule"
         android:label="fragment_edit_my_room_schedule"
         tools:layout="@layout/fragment_edit_my_room_schedule" >
-        <argument
-            android:name="room"
-            app:argType="com.example.virtualclasses.model.Room" />
         <action
             android:id="@+id/action_editMyRoomSchedule_to_scheduleFormFragment"
             app:destination="@id/scheduleFormFragment" />
-        <argument
-            android:name="defaultOrUpdated"
-            app:argType="integer" />
-        <argument
-            android:name="weekOfDayIndex"
-            app:argType="integer" />
     </fragment>
     <fragment
         android:id="@+id/viewSubscribedRoomSchedule"
         android:name="com.example.virtualclasses.ui.fragments.ViewSubscribedRoomSchedule"
         android:label="fragment_view_subscribed_room_schedule"
-        tools:layout="@layout/fragment_view_subscribed_room_schedule" >
-        <argument
-            android:name="room"
-            app:argType="com.example.virtualclasses.model.Room" />
-    </fragment>
+        tools:layout="@layout/fragment_view_subscribed_room_schedule" />
     <fragment
         android:id="@+id/scheduleFormFragment"
         android:name="com.example.virtualclasses.ui.fragments.ScheduleFormFragment"
         android:label="fragment_schedule_form"
-        tools:layout="@layout/fragment_schedule_form" >
-        <argument
-            android:name="daySchedule"
-            app:argType="com.example.virtualclasses.model.DaySchedule" />
-    </fragment>
+        tools:layout="@layout/fragment_schedule_form" />
 </navigation>
