--- a/app/src/main/res/layout/fragment_subscribed_room_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_subscribed_room_bottom_sheet.xml
@@ -43,6 +43,7 @@
         android:layout_below="@id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_above="@+id/addButton"
         android:layout_marginTop="12dp"/>
 
     <ProgressBar
@@ -53,5 +54,14 @@
         android:layout_below="@id/toolbar"
         android:layout_centerHorizontal="true"
         android:visibility="visible"/>
+
+    <ImageView
+        android:id="@+id/addButton"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:src="@drawable/ic_add"
+        android:background="@color/lightGreen"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"/>
 
 </RelativeLayout>
