--- a/app/src/main/res/layout/fragment_view_subscribed_room_schedule.xml
+++ b/app/src/main/res/layout/fragment_view_subscribed_room_schedule.xml
@@ -21,6 +21,7 @@
     </androidx.cardview.widget.CardView>
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/viewSubscribedRoomRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
