--- a/app/src/main/res/layout/item_room.xml
+++ b/app/src/main/res/layout/item_room.xml
@@ -1,21 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+
+<androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:gravity="center"
-    android:padding="16dp">
+    android:elevation="4dp"
+    android:padding="16dp"
+    android:layout_margin="8dp">
 
-    <TextView
-        android:id="@+id/roomTitle"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="room name"/>
-    <TextView
-        android:id="@+id/roomDescription"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="room description"/>
+        android:orientation="vertical"
+        android:gravity="center"
+        android:padding="16dp">
 
-</LinearLayout>
+        <TextView
+            android:id="@+id/roomTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="room name"/>
+        <TextView
+            android:id="@+id/roomDescription"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="room description"/>
+
+    </LinearLayout>
+
+</androidx.cardview.widget.CardView>
