--- a/app/src/main/res/layout/fragment_my_room_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_my_room_bottom_sheet.xml
@@ -43,7 +43,8 @@
         android:layout_below="@id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="12dp"/>
+        android:layout_marginTop="12dp"
+        android:layout_above="@id/btnCreateRoom"/>
 
     <ProgressBar
         android:id="@+id/myRoomBottomProgressBar"
@@ -53,5 +54,15 @@
         android:layout_below="@id/toolbar"
         android:layout_centerHorizontal="true"
         android:visibility="visible"/>
+    <TextView
+        android:id="@+id/btnCreateRoom"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:background="@color/green"
+        android:text="Create a new Room"
+        android:gravity="center"
+        android:textSize="20sp"
+        android:textColor="#fff"
+        android:layout_alignParentBottom="true"/>
 
 </RelativeLayout>
