--- a/app/src/main/res/layout/fragment_view_subscribed_room_schedule.xml
+++ b/app/src/main/res/layout/fragment_view_subscribed_room_schedule.xml
@@ -5,24 +5,17 @@
     android:layout_height="match_parent"
     tools:context=".ui.fragments.ViewSubscribedRoomSchedule">
 
-    <androidx.cardview.widget.CardView
+
+    <Spinner
+        android:id="@+id/daySpinner"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <Spinner
-                android:id="@+id/daySpinner"
-                android:layout_width="wrap_content"
-                android:layout_height="36dp"
-                android:layout_weight="1"/>
-        </LinearLayout>
-    </androidx.cardview.widget.CardView>
+        android:layout_height="36dp" />
+
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/viewSubscribedRoomRecyclerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:layout_below="@id/daySpinner" />
 
 </RelativeLayout>
