--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -33,6 +33,9 @@
         <action
             android:id="@+id/action_homeFragment_to_viewSubscribedRoomSchedule"
             app:destination="@id/viewSubscribedRoomSchedule" />
+        <action
+            android:id="@+id/action_homeFragment_to_selectRoomFragment"
+            app:destination="@id/selectRoomFragment" />
     </fragment>
     <dialog
         android:id="@+id/myRoomBottomSheetFragment"
@@ -75,4 +78,9 @@
         android:name="com.example.virtualclasses.ui.fragments.AddRoomFragment"
         android:label="fragment_add_room"
         tools:layout="@layout/fragment_add_room" /><action android:id="@+id/action_global_addRoomFragment" app:destination="@id/addRoomFragment"/>
+    <fragment
+        android:id="@+id/selectRoomFragment"
+        android:name="com.example.virtualclasses.ui.fragments.SelectRoomFragment"
+        android:label="fragment_select_room"
+        tools:layout="@layout/fragment_select_room" />
 </navigation>
