--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -106,9 +106,18 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvHomeFragment"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_below="@id/tvTodaySchedule"
             />
+
+        <ProgressBar
+            android:id="@+id/pbHome"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tvTodaySchedule"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="24dp"
+            android:visibility="visible"/>
 
     </RelativeLayout>
 
