--- a/app/src/main/res/layout/fragment_select_room.xml
+++ b/app/src/main/res/layout/fragment_select_room.xml
@@ -10,5 +10,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:listitem="@layout/item_room"/>
+    <ProgressBar
+        android:id="@+id/pbSelectRoomFragment"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"/>
 
 </RelativeLayout>
